--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:locallegends_db}?allowPublicKeyRetrieval=true&useSSL=false
     username: ${DATABASE_USER:root}
-    password: ${DATABASE_PASSWORD:youngtips}
+    password: ${DATABASE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -15,8 +15,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME:mytipstadiwa@gmail.com}
-    password: iavc nrdt jdin kjyu
+    username: ${MAIL_USERNAME}
+    password: //my password
     properties:
       mail:
         smtp:
